<resources>
    <string name="app_name">SBK</string>
    <string name="title_activity_login">LoginActivity</string>

    <!--login page-->
    <string name="user_id">User ID</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="forgot_password_text">Forget Password?</string>
    <string name="not_registered_yet_text">Forgot Password</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_msg">Welcome to SKB office App</string>
    <string name="reminder_msg">Don\'t forget to submit your daily task </string>
    <string name="task">Today Task </string>
    <string name="meeting">Meeting</string>
    <string name="field_work">Field Work</string>
    <string name="regular_office">Regular Office</string>
    <string name="others">Others</string>
    <string name="submit">Submit</string>

</resources>
